Cor aplicada ao quadrado

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             colorAttachments: [{
                 view: context.getCurrentTexture().createView(),
                 loadOp: "clear",
+                clearValue: {r: 0, g: 0, b: 0.4, a: 1},
                 storeOp: "store",
             }]
         });
@@ -43,7 +44,7 @@
 
         device.queue.submit([encoder.finish()]);
 
-        
+
 
 
     </script>
