--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
             format: canvasFormat,
         });
 
+        const vertices = new Float32Array([
+        -0.8, -0.8, // Triangle 1 (Blue)
+         0.8, -0.8,
+         0.8,  0.8,
+
+        -0.8, -0.8, // Triangle 2 (Red)
+         0.8,  0.8,
+        -0.8,  0.8,
+        ]);
+
         const encoder = device.createCommandEncoder();
 
         const pass = encoder.beginRenderPass({
