Buffer de vertice criado

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         -0.8,  0.8,
         ]);
 
+        const vertexBuffer = device.createBuffer({
+            label: "Cell vertices",
+            size: vertices.byteLength,
+            usage: GPUBufferUsage.VERTEX | GPUBufferUsage.COPY_DST,
+        });
+
+        device.queue.writeBuffer(vertexBuffer, /*bufferOffset=*/0, vertices);
+
         const encoder = device.createCommandEncoder();
 
         const pass = encoder.beginRenderPass({
