Inicio aos sombreadores

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
 
         device.queue.writeBuffer(vertexBuffer, /*bufferOffset=*/0, vertices);
 
+        const vertexBufferLayout = {
+            arrayStride: 8,
+            attributes: [{
+                format: "float32x2",
+                offset: 0,
+                shaderLocation: 0,
+            }],
+        };
+        
         const encoder = device.createCommandEncoder();
 
         const pass = encoder.beginRenderPass({
@@ -62,7 +71,12 @@
 
         device.queue.submit([encoder.finish()]);
 
-
+        const cellShaderModule = device.createShaderModule({
+            label: "Cell shader",
+            code: `
+            // Your shader code will go here
+          `
+        });
 
 
     </script>
