--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
         const cellShaderModule = device.createShaderModule({
             label: "Cell shader",
             code: `
-            // Your shader code will go here
+            @vertex
+            fn vertexMain(@location(0) pos: vec2f) ->
+             @builtin(position) vec4f {
+             return vec4f(pos, 0, 1);
+            }
           `
         });
 
