--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
              @builtin(position) vec4f {
              return vec4f(pos, 0, 1);
             }
+
+            @fragment
+            fn fragmentMain() -> @location(0) vec4f {
+                
+            }
+
           `
         });
 
