Funcao completa do sombreador de fragmento completo

--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
 
             @fragment
             fn fragmentMain() -> @location(0) vec4f {
-                
+                return vec4f(1, 0, 0, 1);
             }
-
           `
         });
 
