--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             }]
         });
 
+        pass.setPipeline(cellPipeline);
+        pass.setVertexBuffer(0, vertexBuffer);
+        pass.draw(vertices.length / 2);
+
         pass.end();
 
         device.queue.submit([encoder.finish()]);
